More error handling added

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -558,3 +558,332 @@ vel vild: velvild
 # sama sem merki : samasemmerki
 # því um líkt : þvíumlíkt
 
+# Context free errors where it is clear what the correction should be
+[unique_errors]
+
+aftu: aftur
+aftúr: aftur
+ahnn: hann
+akstu: akstur
+aldei: aldrei
+aldrey: aldrei
+allaf: alltaf
+allanvega: allavega
+allaveg: allavega
+allavena: allavega
+alldrei: aldrei
+allltaf: alltaf
+allta: alltaf
+altaf: alltaf
+ananr: annar
+ananrs: annars
+andyri: anddyri
+annahvort: annaðhvort
+annarar: annarrar
+annarr: annar
+arsemi: arðsemi
+athygi: athygli
+augnæknis: augnlæknis
+auvðitað: auðvitað
+auðvita: auðvitað
+aþr: þar
+Björgvinn: Björgvin
+bárus: bárust
+bæum: bæjum
+deyji: deyi
+dróu: drógu
+efitr: eftir
+eft: eftir
+efti: eftir
+eftr: eftir
+eimitt: einmitt
+einhversslags: einhvers konar
+ekkkert: ekkert
+ekkki: ekki
+fanns: fannst
+ferkar: frekar
+fingu: fingur
+fjórfallt: fjórfalt
+fjögura: fjögurra
+fjörtíu: fjörutíu
+fleirra: fleira
+fleirri: fleiri
+fljúgjandi: fljúgandi
+fomaður: formaður
+fyrs: fyrst
+fék: fékk
+gengdi: gegndi
+gengdu: gegndu
+gengt: gegnt
+getiru: getirðu
+geturu: geturðu
+han: hann
+hinns: hins
+hvaðann: hvaðan
+hyggðust: hygðust
+héðann: héðan
+innann: innan
+jafvel: jafnvel
+kannske: kannski
+kanski: kannski
+komsat: komast
+kvar: hvar
+kvenær: hvenær
+kversu: hversu
+kvort: hvort
+leggði: legði
+lika: líka
+liltu: litlu
+mart: margt
+misskilingur: misskilningur
+norðann: norðan
+nottla: náttúrulega
+náttla: náttúrulega
+pragt: prakt
+reindar: reyndar
+sagð: sagði
+samkynhneiðra: samkynhneigðra
+skerðin: skerðing
+skoðunu: skoðunum
+soleiðis: svoleiðis
+solleis: svoleiðis
+solleiðis: svoleiðis
+sollis: svoleiðis
+starfssemi: starfsemi
+stendu: stendur
+stærs: stærst
+stætó: strætó
+sunnann: sunnan
+Svíðþjóð: Svíþjóð
+Svíðþjóðar: Svíþjóðar
+sæu: sæju
+sæum: sæjum
+sæust: sæjust
+síðsta: síðasta
+síðstu: síðustu
+síðus: síðust
+sólarmeginn: sólarmegin
+tvöfallt: tvöfalt
+tífallt: tífalt
+tóskt: tókst
+utann: utan
+vegn: vegna
+veirð: verið
+vekji: veki
+vekjir: vekir
+virðst: virst
+yfi: yfir
+ábygð: ábyrgð
+áfam: áfram
+áfarm: áfram
+áfarmhaldandi: áframhaldandi
+áftur: aftur
+áhri: áhrif
+átjan: átján
+átjanda: átjánda
+átjá: átján
+áðann: áðan
+áðann: áðan
+ætlaru: ætlarðu
+ættiru: ættirðu
+íllt: illt
+Íslendignar: Íslendingar
+ókeipis: ókeypis
+þanig: þannig
+þanngað: þangað
+þei: þeir
+þgear: þegar
+þrefallt: þrefalt
+þvi: því
+fyr: fyrr
+fyst: fyrst
+huxa: hugsa
+huxi: hugsi
+héllt: hélt
+janframt: jafnframt
+jamt: jafnt
+ringdi: rigndi
+silgt: siglt
+silgdi: sigldi
+silgdu: sigldu
+slóu: slógu
+sæu: sæju
+sæum: sæjum
+vekji: veki
+virðst: virst
+þeira: þeirra
+þeiri: þeirri
+
+# unique multiword errors, dealt with in errtokenizer.py
+[multiword_errors]
+í tilefni að: AÐAF, 2, af
+af eigin frumkvæði: AÐAF, 0, að
+af einhverju leyti: AÐAF, 0, að
+af fyrra bragði: AÐAF, 0 að
+af gefnu tilefni: AÐAF, 0, að
+af mestu leyti: AÐAF, 0, að
+af miklu leyti: AÐAF, 0, að
+af verðleikum: AÐAF, 0, að
+af yfirlögðu ráði: AÐAF, 0, að
+af ástæðulausu: AÐAF, 0, að
+af öllu leyti: AÐAF, 0, að
+að fremsta megni: AÐAF, 0, af
+að fúsum og frjálsum vilja: AÐAF, 0, af
+að gefnu tilefni: AÐAF, 0, af
+að hjartans lyst: AÐAF, 0, af
+að hvaða tilefni: AÐAF, 0, af
+að sjálfsdáðum: AÐAF, 0, af
+að ásettu ráði: AÐAF, 0, af
+að öllu afli: AÐAF, 0, af
+að því tilefni: AÐAF, 0, af
+eitthvað að viti: AÐAF, 1, af
+utan að landi: AÐAF, 1, af
+af hjartans list: YI, 2, lyst
+alla sýna lífdaga: YI, 1, sína
+alla sýna ævi: YI, 1, sína
+að einu leitinu: YI, 2, leytinu
+að fullu leiti: YI, 2, leyti
+að hinu leitinu: YI, 2, leytinu
+að mestu leiti: YI, 2, leyti
+að mestu leiti: YI, 2, leyti
+að miklu leiti: YI, 2, leyti
+að öllu leiti: YI, 2, leyti
+að því tilskyldu: YI, 2, tilskildu
+björn í híði: YI, 2, hýði
+bæn sýna uppfyllta: YI, 1, sína
+drauma sýna rætast: YI, 1, sína
+ekki allt ömmu sýna: YI, 3, sína
+ekki eftir neinu að býða: YI, 4, bíða
+fríður sínum: YI, 1, sýnum
+fótum sýnum forráð: YI, 1, sínum
+hreint fyrir sýnum dyrum: YI, 2, sínum
+hvað á þetta að þíða: YI, 4, þýða
+krók á götu sýna: YI, 3, sína
+leifi frá störfum: YI, 0, leyfi
+leiðir skyldi: YI, 1, skildi
+lifandi líst: YI, 1, lýst
+lykkju á leið sýna: YI, 3, sína
+líður og býður: YI, 2, bíður
+lýta aldrei glaðan dag: YI, 0, líta
+lýta björtum augum: YI, 0, líta
+lýta hornauga: YI, 0, líta
+lýta spurnaraugum: YI, 0, líta
+lýta um hæl: YI, 0, líta
+lýta yfir farinn veg: YI, 0, líta
+lýta á björtu hliðarnar: YI, 0, líta
+lýta á klukkuna: YI, 0, líta
+lýta í allar áttir: YI, 0, líta
+lýta í eigin barm: YI, 0, líta
+lýta í kringum: YI, 0, líta
+lýti aldrei glaðan dag: YI, 0, líti
+lýti björtum augum: YI, 0, líti
+lýti hornauga: YI, 0, líti
+lýti spurnaraugum: YI, 0, líti
+lýti um hæl: YI, 0, líti
+lýti yfir farinn veg: YI, 0, líti
+lýti á björtu hliðarnar: YI, 0, líti
+lýti á klukkuna: YI, 0, líti
+lýti í allar áttir: YI, 0, líti
+lýti í eigin barm: YI, 0, líti
+lýti í kringum: YI, 0, líti
+með bestu list: YI, 2,  lyst
+með orðum líst: YI, 2,  lýst
+orði né eyði: YI, 2,  eiði
+skildi hundur heita: YI, 0,
+skini skroppin: YI, 0, skyni
+skini skroppinn: YI, 0, skyni
+skyldi ekki baun: YI, 0, skildi
+skyldi ekki bofs: YI, 0, skildi
+skyldi ekki neitt: YI, 0, skildi
+skyldi fyrr en skall í tönnum: YI, 0, skildi
+skyn og skúrir: YI, 0, skin
+sér og sýnum: YI, 2, sínum
+sýna hentisemi: YI, 0, sína
+sýnum eigin augum: YI, 0, sínum
+um sama leiti: YI, 2, leyti
+um það leiti: YI, 2, leyti
+um þetta leiti: YI, 2, leyti
+vilja sýnum framgengt: YI, 1, sínum
+við líði: YI, 1, lýði
+á næsta leyti: YI, 2, leiti
+á sýnum tíma: YI, 1, sínum
+í eiði: YI, 1, eyði
+í hægðum sýnum: YI, 2, sínum
+í því skini: YI, 2, skyni
+ítrustu varúðar: YI, 0, ýtrustu
+ósk sýna uppfyllta: YI, 1, sína
+þar til yfir líkur: YI, 3, lýkur
+þíðir ekkert að: YI, 0, þýðir
+þýða í ísinn: YI, 0, þíða
+allt kvað af tekur: KHV, 1, hvað
+allt kvað fætur toga: KHV, 1, hvað
+kvað eftir annað: KHV, hvað eftir annað
+kvað hangir á spýtunni: KHV, 0, hvað
+kvað hékk á spýtunni: KHV, 0, hvað
+kvað klukkan slær: KHV, 0, hvað
+kvað klukkan sló: KHV, 0, hvað
+kvað ofan í annað: KHV, 0, hvað
+kvað sem er: KHV, 0, hvað
+kvað sem tautar og raular: KHV, 0, hvað
+kvað sem á bjátar: KHV, 0, hvað
+kvað sem á dynur: KHV, 0, hvað
+kvað skal til bragðs taka: KHV, 0, hvað
+kvað til bragðs skal taka: KHV, 0, hvað
+kvað úr hverju: KHV, 0, hvað
+kver heilvita maður: KHV, 0, hver
+kver með sínu nefi: KHV, 0, hver
+kver sem vettlingi getur valdið: KHV, 0, hver
+kver veit nema: KHV, 0, hver
+en kvað það var gaman: KHV, 1, hvað
+í mestu kviðunum: KHV, 2, hviðunum
+á morgnanna: N, 1, morgnana
+eina ferðina en: N, 2, enn
+ekki er öll nótt úti en: N, 5, enn
+en einu sinni: N, 0, enn
+en fremur: N, 0, enn
+en og aftur: N, 0, enn
+en um sinn: N, 0, enn
+en á dögum: N, 0, enn
+en í dag: N, 0, enn
+en þann dag í dag: N, 0, enn
+en þá í dag: N, 0, enn
+lifir en í glæðunum: N, 1, enn
+beggja megin: WRONG_WORD, 0, báðuM
+eins og helt sé úr fötu: WRONG_WORD, 2, hellt
+engu að síður: WRONG_WORD, 0, eigi
+gefur að líta: WRONG_WORD, 0, getur
+helltist úr lestinni: WRONG_WORD, 0, heltist
+helti olíu á eldinn: WRONG_WORD, 0, hellti
+helti úr skálum reiði: WRONG_WORD, 0, hellti
+kynferðislegt áreiti: WRONG_WORD, 1, áreitni
+meira og minna: WRONG_WORD, 1, eða
+oft á tíðum: WRONG_WORD, 1, og
+á vetfangi: WRONG_WORD, 1, vettvangi
+í einu vettvangi: WRONG_WORD, 2, vetfangi
+í rénum: WRONG_WORD, 1, rénun
+í staðin: WRONG_WORD, 1, staðinn
+ég vill: WRONG_PERSON, 1, vil
+það vil: WRONG_PERSON, 1, vill
+hann vil: WRONG_PERSON, 1, vill
+hún vil: WRONG_PERSON, 1, vill
+himininn byrgist: WRONG_CASE, 0, himinninn
+himinn höndum tekið: WRONG_CASE, 0, himin
+himinninn heiðir: WRONG_CASE, 0, himininn
+með tillit til: WRONG_CASE, 1, tilliti
+undir beran himinn: WRONG_CASE, 2, himin
+í takt við: WRONG_CASE, 1, takti
+réttu megin: WRONG_GENDER, 0, réttum
+í auknu mæli: WRONG_GENDER, 1, auknum
+í einhverju mæli: WRONG_GENDER, 1, einhverjum
+í fleira en eitt skipti: WRONG_FORM, 1, fleiri
+eiga þakkir skilið: WRONG_FORM, 2, skildar
+hegndi bakara fyrir smið: TRANSPOSITION, 0, hengdi
+miklum mun meira: REDUNDANT_WORD, 0, mun meira
+mikið magn af: REDUNDANT_WORD, 1, mikið af
+hvaðanæva að af landinu: REDUNDANT_WORD, 1, hvaðanæva af landinu
+öðru hvoru megin: WRONG_GENDER, 0:1, öðrum hvorum megin
+öðruhvoru megin: WRONG_GENDER, 0:1, öðrum hvorum megin
+burtséð frá: WRONG_PHRASE, -1, að undanskildu
+erlendis frá: WRONG_PHRASE, -1, frá útlöndum
+talandi um: WRONG_PHRASE, -1, fyrst rætt er um
+til margra ára: WRONG_PHRASE, -1, í mörg ár
