Updated .travis.yml to use Xenial distribution

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: python
 
+dist: xenial
+
 python:
   - "3.4"
   - "3.5"
   - "3.6"
-#  - "pypy3.5"
+  - "pypy3.5"
 
 install:
   # Python 3.4 seems to require pip and setuptools
