Added tests for most types of single-token errors and made sure they pass

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -576,6 +576,7 @@ vel vild
 önd verður
 ör magna
 úrvals hveiti
+
 # Split into 3 words
 #heils dags starf
 #heils árs vegur
@@ -715,6 +716,7 @@ vel vild
 "ættiru", "ættirðu"
 "íllt", "illt"
 "Íslendignar", "Íslendingar"
+"Íslendignur", "Íslendingur"
 "ókeipis", "ókeypis"
 "þanig", "þannig"
 "þanngað", "þangað"
@@ -950,7 +952,7 @@ við líði                    	$error(YI, við lýði)
 [error_forms]
 
 # Wrong word forms
-# Form is lemma;wrong form; right form;id;PoS;tag
+# Form is wrong form;lemma;right form;id;PoS;tag
 
 á;ær;ær;191331;kvk;NFET
 ær;ær;á;191331;kvk;ÞFET
