--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
   - "3.4"
   - "3.5"
   - "3.6"
-  - "pypy3.5"
+#  - "pypy3.5"  # Has a problem with the resource directory, for some reason
 
 install:
   # Python 3.4 seems to require pip and setuptools
