Bug fixes in errtokenizer.py and ReynirCorrect.conf

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -1014,10 +1014,10 @@ meginn;megin;megin;0;ao;-
 greftri;gröftur;grefti;480279;kk;ÞGFET
 graftrar;gröftur;graftar;480279;kk;EFET
 hendi;hönd;hönd;426053;kvk;NFET
-hendin;hönd;höndin;426053;kvk;NFETgr
 hendi;hönd;hönd;426053;kvk;ÞFET
+hendin;hönd;höndin;426053;kvk;NFETgr
 hendina;hönd;höndina;426053;kvk;ÞFETgr
-höndinni;hönd;hendi;426053;kvk;ÞGFET
+höndinni;hönd;hendinni;426053;kvk;ÞGFET
 milljarðir;milljarður;milljarðar;6330;kk;NFFT
 milljarðirnir;milljarður;milljarðarnir;6330;kk;NFFTgr
 mánuða;mánuður;mánaða;391187;kk;EFFT
