Support inflection forms for split compounds; tests added

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -469,7 +469,7 @@ endur úthluta
 farþega megin
 fjölda margir
 for maður
-forkunnar fagir
+forkunnar fagur
 frum stæður
 full mikill
 furðu góður
@@ -484,7 +484,7 @@ hálf undarlegur
 hálfs mánaðarlega
 hálftíma gangur
 innvortis blæðing
-jafn framt
+jafn framur   # oftast 'jafn framt'
 jafn lyndur
 jafn vægi
 karla megin
@@ -521,7 +521,6 @@ megin viðfangsefni
 megin ágreiningur
 megin ákvörðun
 megin áveitukerfi
-mest allt
 mest allur
 meðal aðgengi
 meðal biðtími
@@ -539,7 +538,7 @@ næst komandi
 næst síðastur
 næst verstur
 sam skeyti
-saman stendur
+saman standa
 sjávar megin
 skammtíma skuld
 skammtíma vistun
