Added logic and tests for capitalization errors

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -752,24 +752,48 @@ Himnaríki
 Múhameðstrú
 Múhameðstrúarmaður
 Múslími
-Neskaupstaður
+# Neskaupstaður ???
 Sjíti
 Súnníti
 evrópa
 sjálfstæðismaður
 ísland
 íslendingur
+danmörk
+dani
+noregur
+norðmaður
+svíþjóð
+svíi
+finnland
+finni
+Íslenskur
+Danskur
+Norskur
+Sænskur
+Finnskur
+Færeyskur
+Grænlenskur
+Franskur
+Þýskur
+Breskur
+Bandarískur
+Hollenskur
+Eistneskur
+Lettneskur
+Litháenskur
+Kanadískur
 
 
 [taboo_words]
 
 # Taboo words, should not be used in formal text
 
-pussa	píka_no
-hommatittur	hommi_no	# 'helvítis hommatittur' er mjög algengt.
-tussa	píka_no		# En getur líka verið notað um stelpu
-negri	svartur_lo
-tilli	limur_no
+pussa	píka_kvk
+hommatittur	hommi_kk	# 'helvítis hommatittur' er mjög algengt.
+tussa	píka_kvk		# En getur líka verið notað um stelpu
+negri	blökkumaður_kk
+tilli	limur_kk
 
 
 [multiword_errors]
