Further work on capitalization; split up tests; handled corner cases

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -742,6 +742,7 @@ vel vild
 [capitalization_errors]
 
 # Common errors in capitalization
+# Note: this list can only include nouns and adjectives
 
 Aríi
 Búddisti
@@ -767,6 +768,10 @@ svíþjóð
 svíi
 finnland
 finni
+kína
+kínverji
+rússland
+rússi
 Íslenskur
 Danskur
 Norskur
