Enhanced capitalization; better performance; taboo words

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -758,35 +758,62 @@ Sjíti
 Súnníti
 evrópa
 sjálfstæðismaður
+
+# !!! TODO: Expand following list of countries and related adjectives
+
 ísland
 íslendingur
+Íslenskur
 danmörk
 dani
+Danskur
 noregur
 norðmaður
+Norskur
 svíþjóð
 svíi
+Sænskur
 finnland
 finni
+Finnskur
 kína
 kínverji
+Kínverskur
 rússland
 rússi
-Íslenskur
-Danskur
-Norskur
-Sænskur
-Finnskur
+Rússneskur
+færeyjar
+færeyingur
 Færeyskur
+grænland
+grænlendingur
 Grænlenskur
+frakkland
+# frakki
 Franskur
+þýskaland
+þjóðverji
 Þýskur
+bretland
+breti
 Breskur
+bandaríkin
+bandaríkjamaður
 Bandarískur
+holland
+hollendingur
 Hollenskur
+eistland
+eisti
 Eistneskur
+lettland
+letti
 Lettneskur
+litháen
+lithái
 Litháenskur
+kanada
+kanadamaður
 Kanadískur
 
 
@@ -795,8 +822,8 @@ Kanadískur
 # Taboo words, should not be used in formal text
 
 pussa	píka_kvk
-hommatittur	hommi_kk	# 'helvítis hommatittur' er mjög algengt.
-tussa	píka_kvk		# En getur líka verið notað um stelpu
+hommatittur	hommi_kk	   # 'helvítis hommatittur' er algengt
+tussa	píka_kvk		      # En getur líka verið notað um stelpu
 negri	blökkumaður_kk
 tilli	limur_kk
 
