Removed _WORD_REPLACE from spelling.py, moved to [unique_errors] section in ReynirCorrect.conf

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -589,6 +589,17 @@ vel vild
 
 # Context free errors where it is clear what the correction should be
 
+"i", "í"
+"a", "á"
+"þu", "þú"
+"þo", "þó"
+"þin", "þín"
+"eg", "ég"
+"þe", "þ.e."
+"fra", "frá"
+"nu", "nú"
+"ut", "út"
+"ifir", "yfir"
 "aftu", "aftur"
 "aftúr", "aftur"
 "ahnn", "hann"
