Added multiword error handling

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -589,17 +589,7 @@ vel vild
 
 # Context free errors where it is clear what the correction should be
 
-"i", "í"
 "a", "á"
-"þu", "þú"
-"þo", "þó"
-"þin", "þín"
-"eg", "ég"
-"þe", "þ.e."
-"fra", "frá"
-"nu", "nú"
-"ut", "út"
-"ifir", "yfir"
 "aftu", "aftur"
 "aftúr", "aftur"
 "ahnn", "hann"
@@ -635,6 +625,7 @@ vel vild
 "eft", "eftir"
 "efti", "eftir"
 "eftr", "eftir"
+"eg", "ég"
 "eimitt", "einmitt"
 "einhversslags", "einhvers konar"
 "ekkkert", "ekkert"
@@ -649,7 +640,10 @@ vel vild
 "fleirri", "fleiri"
 "fljúgjandi", "fljúgandi"
 "fomaður", "formaður"
+"fra", "frá"
+"fyr", "fyrr"
 "fyrs", "fyrst"
+"fyst", "fyrst"
 "fék", "fékk"
 "gengdi", "gegndi"
 "gengdu", "gegndu"
@@ -658,11 +652,19 @@ vel vild
 "geturu", "geturðu"
 "han", "hann"
 "hinns", "hins"
+"huxa", "hugsa"
+"huxi", "hugsi"
 "hvaðann", "hvaðan"
+"hvorutveggja", "hvort tveggja"
 "hyggðust", "hygðust"
+"héllt", "hélt"
 "héðann", "héðan"
+"i", "í"
+"ifir", "yfir"
 "innann", "innan"
 "jafvel", "jafnvel"
+"jamt", "jafnt"
+"janframt", "jafnframt"
 "kannske", "kannski"
 "kanski", "kannski"
 "komsat", "komast"
@@ -677,13 +679,19 @@ vel vild
 "misskilingur", "misskilningur"
 "norðann", "norðan"
 "nottla", "náttúrulega"
+"nu", "nú"
 "náttla", "náttúrulega"
 "pragt", "prakt"
 "reindar", "reyndar"
+"ringdi", "rigndi"
 "sagð", "sagði"
 "samkynhneiðra", "samkynhneigðra"
+"silgdi", "sigldi"
+"silgdu", "sigldu"
+"silgt", "siglt"
 "skerðin", "skerðing"
 "skoðunu", "skoðunum"
+"slóu", "slógu"
 "soleiðis", "svoleiðis"
 "solleis", "svoleiðis"
 "solleiðis", "svoleiðis"
@@ -705,6 +713,7 @@ vel vild
 "tvöfallt", "tvöfalt"
 "tífallt", "tífalt"
 "tóskt", "tókst"
+"ut", "út"
 "utann", "utan"
 "vegn", "vegna"
 "veirð", "verið"
@@ -730,24 +739,16 @@ vel vild
 "ókeipis", "ókeypis"
 "þanig", "þannig"
 "þanngað", "þangað"
+"þe", "þ.e."
 "þei", "þeir"
-"þgear", "þegar"
-"þrefallt", "þrefalt"
-"þvi", "því"
-"fyr", "fyrr"
-"fyst", "fyrst"
-"huxa", "hugsa"
-"huxi", "hugsi"
-"héllt", "hélt"
-"janframt", "jafnframt"
-"jamt", "jafnt"
-"ringdi", "rigndi"
-"silgt", "siglt"
-"silgdi", "sigldi"
-"silgdu", "sigldu"
-"slóu", "slógu"
 "þeira", "þeirra"
 "þeiri", "þeirri"
+"þgear", "þegar"
+"þin", "þín"
+"þo", "þó"
+"þrefallt", "þrefalt"
+"þu", "þú"
+"þvi", "því"
 
 
 [capitalization_errors]
