Used reynir.MatchingStream base class to simplify and refactor handle_multiword_errors()

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -987,6 +987,7 @@ um það leiti					$error(YI, um það leyti)
 um þetta leiti					$error(YI, um þetta leyti)
 undir beran himinn				$error(WRONG_CASE, undir beran himin)
 utan að landi               	$error(AÐAF, utan af landi)
+verða vitni af					$error(AÐAF, verða vitni að)
 vilja sýnum framgengt			$error(YI, vilja sínum framgengt)
 við líði                    	$error(YI, við lýði)
 á morgnanna                 	$error(N, á morgnana)
