Require reynir>=1.3.3 for installation; smaller fixes

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -887,13 +887,13 @@ eitthvað að viti            	$error(AÐAF, eitthvað af viti)
 ekki allt ömmu sýna				$error(YI, ekki allt ömmu sína)
 ekki eftir neinu að býða		$error(YI, ekki eftir neinu að bíða)
 ekki er öll nótt úti en			$error(N, ekki er öll nótt úti enn)
-en einu sinni					$error(N, enn einu sinni)
-en fremur						$error(N, enn fremur)
+# en einu sinni					$error(N, enn einu sinni)
+# en fremur						$error(N, enn fremur)
 en kvað það var gaman			$error(KHV, en hvað það var gaman)
 en og aftur						$error(N, enn og aftur)
-en um sinn						$error(N, enn um sinn)
-en á dögum						$error(N, enn á dögum)
-en í dag						$error(N, enn í dag)
+# en um sinn						$error(N, enn um sinn)
+# en á dögum						$error(N, enn á dögum)
+# en í dag						$error(N, enn í dag)
 en þann dag í dag				$error(N, enn þann dag í dag)
 en þá í dag						$error(N, enn þá í dag)
 engu að síður               	$error(WRONG_WORD, eigi að síður)  # (mælt með)
