Fixed multi-word error handling; new phrases

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -652,6 +652,7 @@ vel vild
 "geturu", "geturðu"
 "han", "hann"
 "hinns", "hins"
+"hundruðir", "hundruð"
 "huxa", "hugsa"
 "huxi", "hugsi"
 "hvaðann", "hvaðan"
@@ -834,8 +835,8 @@ Kanadískur
 # Taboo words, should not be used in formal text
 
 pussa	píka_kvk
-hommatittur	hommi_kk	   # 'helvítis hommatittur' er algengt
-tussa	píka_kvk		      # En getur líka verið notað um stelpu
+hommatittur	hommi_kk
+tussa	píka_kvk
 negri	blökkumaður_kk
 tilli	limur_kk
 
@@ -845,16 +846,18 @@ tilli	limur_kk
 # unique multiword errors, dealt with in errtokenizer.py
 
 af eigin frumkvæði          	$error(AÐAF, að eigin frumkvæði)
-af einhverju leyti          	$error(AÐAF, að einhverju leyti)
 af fyrra bragði             	$error(AÐAF, að fyrra bragði)
 af gefnu tilefni            	$error(AÐAF, að gefnu tilefni)
 af hjartans list				$error(YI, af hjartans lyst)
+af einhverju leyti          	$error(AÐAF, að einhverju leyti)
 af mestu leyti              	$error(AÐAF, að mestu leyti)
 af miklu leyti              	$error(AÐAF, að miklu leyti)
+af verulegu leyti              	$error(AÐAF, að verulegu leyti)
+af talsverðu leyti             	$error(AÐAF, að talsverðu leyti)
+af öllu leyti               	$error(AÐAF, að öllu leyti)
 af verðleikum               	$error(AÐAF, að verðleikum)
 af yfirlögðu ráði           	$error(AÐAF, að yfirlögðu ráði)
 af ástæðulausu              	$error(AÐAF, að ástæðulausu)
-af öllu leyti               	$error(AÐAF, að öllu leyti)
 alla sýna lífdaga				$error(YI, alla sína lífdaga)
 alla sýna ævi					$error(YI, alla sína ævi)
 allt kvað af tekur				$error(KHV, allt hvað af tekur)
@@ -869,6 +872,8 @@ að hjartans lyst            	$error(AÐAF, af hjartans lyst)
 að hvaða tilefni            	$error(AÐAF, af hvaða tilefni)
 að mestu leiti					$error(YI, að mestu leyti)
 að miklu leiti              	$error(YI, að miklu leyti)
+að verulegu leiti              	$error(YI, að verulegu leyti)
+að talsverðu leiti             	$error(YI, að talsverðu leyti)
 að sjálfsdáðum              	$error(AÐAF, af sjálfsdáðum)
 að ásettu ráði              	$error(AÐAF, af ásettu ráði)
 að öllu afli                	$error(AÐAF, af öllu afli)
@@ -891,8 +896,8 @@ ekki er öll nótt úti en			$error(N, ekki er öll nótt úti enn)
 # en fremur						$error(N, enn fremur)
 en kvað það var gaman			$error(KHV, en hvað það var gaman)
 en og aftur						$error(N, enn og aftur)
-# en um sinn						$error(N, enn um sinn)
-# en á dögum						$error(N, enn á dögum)
+# en um sinn					$error(N, enn um sinn)
+# en á dögum					$error(N, enn á dögum)
 # en í dag						$error(N, enn í dag)
 en þann dag í dag				$error(N, enn þann dag í dag)
 en þá í dag						$error(N, enn þá í dag)
@@ -1011,6 +1016,7 @@ við líði                    	$error(YI, við lýði)
 ósk sýna uppfyllta       		$error(YI, ósk sína uppfyllta)
 öðru hvoru megin            	$error(WRONG_GENDER, öðrum hvorum megin)
 öðruhvoru megin             	$error(WRONG_GENDER, öðrum hvorum megin)
+öll sömun						$error(WRONG_WORD, öll sömul)
 þar til yfir líkur				$error(YI, þar til yfir lýkur)
 það vil                     	$error(WRONG_PERSON, það vill)
 þíðir ekkert að					$error(YI, þýðir ekkert að)
