Updated ReynirCorrect.conf with more multiword phrases

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -850,14 +850,17 @@ af fyrra bragði             	$error(AÐAF, að fyrra bragði)
 af gefnu tilefni            	$error(AÐAF, að gefnu tilefni)
 af hjartans list				$error(YI, af hjartans lyst)
 af einhverju leyti          	$error(AÐAF, að einhverju leyti)
+af engu leyti              		$error(AÐAF, að engu leyti)
 af mestu leyti              	$error(AÐAF, að mestu leyti)
 af miklu leyti              	$error(AÐAF, að miklu leyti)
+af neinu leyti              	$error(AÐAF, að neinu leyti)
 af verulegu leyti              	$error(AÐAF, að verulegu leyti)
 af talsverðu leyti             	$error(AÐAF, að talsverðu leyti)
 af öllu leyti               	$error(AÐAF, að öllu leyti)
 af verðleikum               	$error(AÐAF, að verðleikum)
 af yfirlögðu ráði           	$error(AÐAF, að yfirlögðu ráði)
 af ástæðulausu              	$error(AÐAF, að ástæðulausu)
+að sjálfdáðum              		$error(WRONG_WORD, af sjálfsdáðum)
 alla sýna lífdaga				$error(YI, alla sína lífdaga)
 alla sýna ævi					$error(YI, alla sína ævi)
 allt kvað af tekur				$error(KHV, allt hvað af tekur)
@@ -870,14 +873,17 @@ að gefnu tilefni            	$error(AÐAF, af gefnu tilefni)
 að hinu leitinu					$error(YI, að hinu leytinu)
 að hjartans lyst            	$error(AÐAF, af hjartans lyst)
 að hvaða tilefni            	$error(AÐAF, af hvaða tilefni)
+að einhverju leiti              $error(YI, að einhverju leyti)
+að engu leiti               	$error(YI, að engu leyti)
 að mestu leiti					$error(YI, að mestu leyti)
 að miklu leiti              	$error(YI, að miklu leyti)
+að neinu leiti               	$error(YI, að neinu leyti)
 að verulegu leiti              	$error(YI, að verulegu leyti)
 að talsverðu leiti             	$error(YI, að talsverðu leyti)
+að öllu leiti               	$error(YI, að öllu leyti)
 að sjálfsdáðum              	$error(AÐAF, af sjálfsdáðum)
 að ásettu ráði              	$error(AÐAF, af ásettu ráði)
 að öllu afli                	$error(AÐAF, af öllu afli)
-að öllu leiti               	$error(YI, að öllu leyti)
 að því tilefni              	$error(AÐAF, af því tilefni)
 að því tilskyldu            	$error(YI, að því tilskildu)
 beggja megin                	$error(WRONG_WORD, báðum megin) # eða beggja vegna
