Added correction pass for compound words

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -645,6 +645,7 @@ vel vild
 "fyrs", "fyrst"
 "fyst", "fyrst"
 "fék", "fékk"
+"gegnst", "gengst"
 "gengdi", "gegndi"
 "gengdu", "gegndu"
 "gengt", "gegnt"
