Corrected handling of capitalized words with apostrophes

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -1051,11 +1051,11 @@ kýrinni;kýr;kúnni;190755;kvk;ÞGFETgr
 kúar;kýr;kýr;190755;kvk;EFET
 kúarinnar;kýr;kýrinnar;190755;kvk;EFETgr
 bylir;bylur;byljir;4743;kk;NFFT
-bylirnir;bylur;byljir;4743;kk;NFFTgr
+bylirnir;bylur;byljirnir;4743;kk;NFFTgr
 fellibylir;fellibylur;fellibyljir;75367;kk;NFFT
-fellibylirnir;fellibylur;fellibyljir;75367;kk;NFFTgr
+fellibylirnir;fellibylur;fellibyljirnir;75367;kk;NFFTgr
 hvirfilbylir;hvirfilbylur;hvirfilbyljir;75387;kk;NFFT
-hvirfilbylirnir;hvirfilbylur;hvirfilbyljir;75387;kk;NFFTgr
+hvirfilbylirnir;hvirfilbylur;hvirfilbyljirnir;75387;kk;NFFTgr
 faðir;faðir;föður;4386;kk;ÞFET
 faðir;faðir;föður;4386;kk;ÞGFET
 faðir;faðir;föður;4386;kk;EFET
