Token error spans and coalescion

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -686,6 +686,12 @@ vel vild
 "pragt", "prakt"
 "reindar", "reyndar"
 "ringdi", "rigndi"
+"ríkistjórn", "ríkisstjórn"
+"ríkistjórnar", "ríkisstjórnar"
+"ríkistjórnin", "ríkisstjórnin"
+"ríkistjórnina", "ríkisstjórnina"
+"ríkistjórninni", "ríkisstjórninni"
+"ríkistjórnarinnar", "ríkisstjórnarinnar"
 "sagð", "sagði"
 "samkynhneiðra", "samkynhneigðra"
 "silgdi", "sigldi"
