Added to README.rst

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -237,7 +237,7 @@ yrði
 "fyrirfram", "fyrir fram"
 "fyrifram", "fyrir fram"
 "fyrren", "fyrr en"
-"fyrripartur", "fyrr partur"
+"fyrripartur", "fyrri partur"
 "heilshugar", "heils hugar"
 "helduren", "heldur en"
 "hinsvegar", "hins vegar"
