Added ErrorDetectionToken class; overriding behavior for verb subjects

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -6,7 +6,7 @@
 
 [allowed_multiples]
 
-# Set of word forms that are allowed to appear more than once in a row
+# Set of word forms that are allowed to appear consecutively in text
 
 af
 auður
@@ -151,7 +151,7 @@ yrði
 
 [wrong_compounds]
 
-# Words that should not be written together
+# Words that should not be written as compounds
 
 "afhverju", "af hverju"
 "aftanfrá", "aftan frá"
@@ -442,7 +442,7 @@ yrði
 
 [split_compounds]
 
-# Words that should be written as one word
+# Words that should be written as one compound word
 
 afbragðs fagur
 afbragðs góður
@@ -773,7 +773,6 @@ Himnaríki
 Múhameðstrú
 Múhameðstrúarmaður
 Múslími
-# Neskaupstaður ???
 Sjíti
 Súnníti
 evrópa
@@ -843,10 +842,9 @@ Kanadískur
 
 pussa	píka_kvk
 hommatittur	hommi_kk
-tussa	píka_kvk
 negri	blökkumaður_kk
 tilli	limur_kk
-
+tussa	píka_kvk
 
 [multiword_errors]
 
