--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,10 @@ install:
   # embedded resources
   - python -m pip install --upgrade pip
   - python -m pip install --upgrade setuptools
+  - git clone https://github.com/vthorsteinsson/ReynirPackage
+  - cd ReynirPackage
+  - python setup.py develop
+  - cd ..
   - python setup.py develop
 
 script:
