--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,11 @@ install:
   # embedded resources
   - python -m pip install --upgrade pip
   - python -m pip install --upgrade setuptools
+  - cd ..
   - git clone https://github.com/vthorsteinsson/ReynirPackage
   - cd ReynirPackage
   - python setup.py develop
-  - cd ..
+  - cd ../ReynirCorrect
   - python setup.py develop
 
 script:
