Moved taboo words check to separate pass; added to ReynirCorrect.conf; blackening

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -533,6 +533,7 @@ mis mikið
 mis stíga
 miðlungs beiskja
 myndar drengur
+ný uppgerður
 næst bestur
 næst komandi
 næst síðastur
@@ -664,6 +665,8 @@ vel vild
 "i", "í"
 "ifir", "yfir"
 "innann", "innan"
+"islam", "íslam"
+"islams", "íslams"
 "jafvel", "jafnvel"
 "jamt", "jafnt"
 "janframt", "jafnframt"
@@ -679,10 +682,27 @@ vel vild
 "liltu", "litlu"
 "mart", "margt"
 "misskilingur", "misskilningur"
+"múslimi", "múslími"
+"múslima", "múslíma"
+"múslimar", "múslímar"
+"múslimum", "múslímum"
+"músliminn", "múslíminn"
+"múslimann", "múslímann"
+"múslimanum", "múslímanum"
+"múslimans", "múslímans"
 "norðann", "norðan"
 "nottla", "náttúrulega"
 "nu", "nú"
 "náttla", "náttúrulega"
+"nýa", "nýja"
+"nýan", "nýjan"
+"nýar", "nýjar"
+"nýum", "nýjum"
+"nýasta", "nýjasta"
+"nýasti", "nýjasti"
+"nýji", "nýi"
+"nýjir", "nýir"
+"nýu", "nýju"
 "pragt", "prakt"
 "reindar", "reyndar"
 "ringdi", "rigndi"
@@ -767,12 +787,19 @@ vel vild
 Aríi
 Búddisti
 Eskimói
+Islam
+Íslam
 Gyðingur
 Helvíti
 Himnaríki
+Kaþólska
+Kristni
+Kristindómur
+Mótmælendatrú
 Múhameðstrú
 Múhameðstrúarmaður
 Múslími
+Múslimi
 Sjíti
 Súnníti
 evrópa
@@ -838,13 +865,20 @@ Kanadískur
 
 [taboo_words]
 
-# Taboo words, should not be used in formal text
+# Taboo or inappropriate words,
+# should not be used in formal text
 
-pussa	píka_kvk
-hommatittur	hommi_kk
-negri	blökkumaður_kk
-tilli	limur_kk
-tussa	píka_kvk
+pussa				píka_kvk
+tussa				píka_kvk
+kunta				píka_kvk
+tilli				limur_kk
+hommatittur			hommi_kk
+faggi				hommi_kk
+negri				blökkumaður_kk
+surtur				blökkumaður_kk
+júði				gyðingur_kk
+múhameðstrú			íslam_hk
+múhameðstrúarmaður	múslími_kk
 
 [multiword_errors]
 
