Fixed test; moved unique_errors section to top of ReynirCorrect.conf; more taboo words

--- a/src/reynir_correct/config/ReynirCorrect.conf
+++ b/src/reynir_correct/config/ReynirCorrect.conf
@@ -4,6 +4,212 @@
 # Copyright (C) 2018 Miðeind ehf
 
 
+[unique_errors]
+
+# Context free errors where it is clear what the correction should be
+
+"a", "á"
+"aftu", "aftur"
+"aftúr", "aftur"
+"ahnn", "hann"
+"akstu", "akstur"
+"aldei", "aldrei"
+"aldrey", "aldrei"
+"allaf", "alltaf"
+"allanvega", "allavega"
+"allaveg", "allavega"
+"allavena", "allavega"
+"alldrei", "aldrei"
+"allltaf", "alltaf"
+"allta", "alltaf"
+"altaf", "alltaf"
+"ananr", "annar"
+"ananrs", "annars"
+"andyri", "anddyri"
+"annahvort", "annaðhvort" # Getur líka verið 'annað hvort'
+"annarar", "annarrar"
+"annarr", "annar"
+"arsemi", "arðsemi"
+"athygi", "athygli"
+"augnæknis", "augnlæknis"
+"auvðitað", "auðvitað"
+"auðvita", "auðvitað"
+"aþr", "þar"
+"Björgvinn", "Björgvin"
+"bárus", "bárust"
+"bæum", "bæjum"
+"deyji", "deyi"
+"dróu", "drógu"
+"efitr", "eftir"
+"eft", "eftir"
+"efti", "eftir"
+"eftr", "eftir"
+"eg", "ég"
+"eimitt", "einmitt"
+"einhversslags", "einhvers konar"
+"ekkkert", "ekkert"
+"ekkki", "ekki"
+"fanns", "fannst"
+"ferkar", "frekar"
+"fingu", "fingur"
+"fjórfallt", "fjórfalt"
+"fjögura", "fjögurra"
+"fjörtíu", "fjörutíu"
+"fleirra", "fleira"
+"fleirri", "fleiri"
+"fljúgjandi", "fljúgandi"
+"fomaður", "formaður"
+"fra", "frá"
+"fyr", "fyrr"
+"fyrs", "fyrst"
+"fyst", "fyrst"
+"fék", "fékk"
+"gegnst", "gengst"
+"gengdi", "gegndi"
+"gengdu", "gegndu"
+"gengt", "gegnt"
+"getiru", "getirðu" # bara algengustu sagnirnar
+"geturu", "geturðu"
+"han", "hann"
+"hinns", "hins"
+"hundruðir", "hundruð"
+"huxa", "hugsa"
+"huxi", "hugsi"
+"hvaðann", "hvaðan"
+"hvorutveggja", "hvort tveggja"
+"hyggðust", "hygðust"
+"héllt", "hélt"
+"héðann", "héðan"
+"i", "í"
+"ifir", "yfir"
+"innann", "innan"
+"islam", "íslam"
+"islams", "íslams"
+"jafvel", "jafnvel"
+"jamt", "jafnt"
+"janframt", "jafnframt"
+"kannske", "kannski"
+"kanski", "kannski"
+"komsat", "komast"
+"kvar", "hvar"
+"kvenær", "hvenær"
+"kversu", "hversu"
+"kvort", "hvort"
+"leggði", "legði"
+"lika", "líka"
+"liltu", "litlu"
+"mart", "margt"
+"misskilingur", "misskilningur"
+"múslimi", "múslími"
+"múslima", "múslíma"
+"múslimar", "múslímar"
+"múslimum", "múslímum"
+"músliminn", "múslíminn"
+"múslimann", "múslímann"
+"múslimanum", "múslímanum"
+"múslimans", "múslímans"
+"norðann", "norðan"
+"nottla", "náttúrulega"
+"nu", "nú"
+"náttla", "náttúrulega"
+"nýa", "nýja"
+"nýan", "nýjan"
+"nýar", "nýjar"
+"nýum", "nýjum"
+"nýasta", "nýjasta"
+"nýasti", "nýjasti"
+"nýji", "nýi"
+"nýjir", "nýir"
+"nýu", "nýju"
+"pragt", "prakt"
+"reindar", "reyndar"
+"ringdi", "rigndi"
+"ríkistjórn", "ríkisstjórn"
+"ríkistjórnar", "ríkisstjórnar"
+"ríkistjórnin", "ríkisstjórnin"
+"ríkistjórnina", "ríkisstjórnina"
+"ríkistjórninni", "ríkisstjórninni"
+"ríkistjórnarinnar", "ríkisstjórnarinnar"
+"sagð", "sagði"
+"samkynhneiðra", "samkynhneigðra"
+"silgdi", "sigldi"
+"silgdu", "sigldu"
+"silgt", "siglt"
+"skerðin", "skerðing"
+"skoðunu", "skoðunum"
+"slóu", "slógu"
+"soleiðis", "svoleiðis"
+"solleis", "svoleiðis"
+"solleiðis", "svoleiðis"
+"sollis", "svoleiðis"
+"starfssemi", "starfsemi"
+"stendu", "stendur"
+"stærs", "stærst"
+"stætó", "strætó"
+"sunnann", "sunnan"
+"Svíðþjóð", "Svíþjóð"
+"Svíðþjóðar", "Svíþjóðar"
+"sæu", "sæju"
+"sæum", "sæjum"
+"sæust", "sæjust"
+"síðsta", "síðasta"
+"síðstu", "síðustu"
+"síðus", "síðust"
+"sólarmeginn", "sólarmegin"
+"tvöfallt", "tvöfalt"
+"tífallt", "tífalt"
+"tóskt", "tókst"
+"ut", "út"
+"utann", "utan"
+"vegn", "vegna"
+"veirð", "verið"
+"vekji", "veki"
+"vekjir", "vekir"
+"virðst", "virst"
+"yfi", "yfir"
+"ábygð", "ábyrgð"
+"áfam", "áfram"
+"áfarm", "áfram"
+"áfarmhaldandi", "áframhaldandi"
+"áftur", "aftur"
+"áhri", "áhrif"
+"átjan", "átján"
+"átjanda", "átjánda"
+"átjá", "átján"
+"áðann", "áðan"
+"ætlaru", "ætlarðu"
+"ættiru", "ættirðu"
+"íllt", "illt"
+"Íslendignar", "Íslendingar"
+"Íslendignur", "Íslendingur"
+"ókeipis", "ókeypis"
+"þáttakandi", "þátttakandi"
+"þáttakanda", "þátttakanda"
+"þáttakendur", "þátttakendur"
+"þáttakendum", "þátttakendum"
+"þáttakenda", "þátttakenda"
+"þáttakandinn", "þátttakandinn"
+"þáttakandann", "þátttakandann"
+"þáttakandanum", "þátttakandanum"
+"þáttakandans", "þátttakandans"
+"þáttakendurnir", "þátttakendurnir"
+"þáttakendurna", "þátttakendurna"
+"þáttakendunum", "þátttakendunum"
+"þáttakendanna", "þátttakendanna"
+"þanig", "þannig"
+"þanngað", "þangað"
+"þe", "þ.e."
+"þei", "þeir"
+"þeira", "þeirra"
+"þeiri", "þeirri"
+"þgear", "þegar"
+"þin", "þín"
+"þo", "þó"
+"þrefallt", "þrefalt"
+"þu", "þú"
+"þvi", "því"
+
+
 [allowed_multiples]
 
 # Set of word forms that are allowed to appear consecutively in text
@@ -586,199 +792,6 @@ vel vild
 #því um líkt
 
 
-[unique_errors]
-
-# Context free errors where it is clear what the correction should be
-
-"a", "á"
-"aftu", "aftur"
-"aftúr", "aftur"
-"ahnn", "hann"
-"akstu", "akstur"
-"aldei", "aldrei"
-"aldrey", "aldrei"
-"allaf", "alltaf"
-"allanvega", "allavega"
-"allaveg", "allavega"
-"allavena", "allavega"
-"alldrei", "aldrei"
-"allltaf", "alltaf"
-"allta", "alltaf"
-"altaf", "alltaf"
-"ananr", "annar"
-"ananrs", "annars"
-"andyri", "anddyri"
-"annahvort", "annaðhvort" # Getur líka verið 'annað hvort'
-"annarar", "annarrar"
-"annarr", "annar"
-"arsemi", "arðsemi"
-"athygi", "athygli"
-"augnæknis", "augnlæknis"
-"auvðitað", "auðvitað"
-"auðvita", "auðvitað"
-"aþr", "þar"
-"Björgvinn", "Björgvin"
-"bárus", "bárust"
-"bæum", "bæjum"
-"deyji", "deyi"
-"dróu", "drógu"
-"efitr", "eftir"
-"eft", "eftir"
-"efti", "eftir"
-"eftr", "eftir"
-"eg", "ég"
-"eimitt", "einmitt"
-"einhversslags", "einhvers konar"
-"ekkkert", "ekkert"
-"ekkki", "ekki"
-"fanns", "fannst"
-"ferkar", "frekar"
-"fingu", "fingur"
-"fjórfallt", "fjórfalt"
-"fjögura", "fjögurra"
-"fjörtíu", "fjörutíu"
-"fleirra", "fleira"
-"fleirri", "fleiri"
-"fljúgjandi", "fljúgandi"
-"fomaður", "formaður"
-"fra", "frá"
-"fyr", "fyrr"
-"fyrs", "fyrst"
-"fyst", "fyrst"
-"fék", "fékk"
-"gegnst", "gengst"
-"gengdi", "gegndi"
-"gengdu", "gegndu"
-"gengt", "gegnt"
-"getiru", "getirðu" # bara algengustu sagnirnar
-"geturu", "geturðu"
-"han", "hann"
-"hinns", "hins"
-"hundruðir", "hundruð"
-"huxa", "hugsa"
-"huxi", "hugsi"
-"hvaðann", "hvaðan"
-"hvorutveggja", "hvort tveggja"
-"hyggðust", "hygðust"
-"héllt", "hélt"
-"héðann", "héðan"
-"i", "í"
-"ifir", "yfir"
-"innann", "innan"
-"islam", "íslam"
-"islams", "íslams"
-"jafvel", "jafnvel"
-"jamt", "jafnt"
-"janframt", "jafnframt"
-"kannske", "kannski"
-"kanski", "kannski"
-"komsat", "komast"
-"kvar", "hvar"
-"kvenær", "hvenær"
-"kversu", "hversu"
-"kvort", "hvort"
-"leggði", "legði"
-"lika", "líka"
-"liltu", "litlu"
-"mart", "margt"
-"misskilingur", "misskilningur"
-"múslimi", "múslími"
-"múslima", "múslíma"
-"múslimar", "múslímar"
-"múslimum", "múslímum"
-"músliminn", "múslíminn"
-"múslimann", "múslímann"
-"múslimanum", "múslímanum"
-"múslimans", "múslímans"
-"norðann", "norðan"
-"nottla", "náttúrulega"
-"nu", "nú"
-"náttla", "náttúrulega"
-"nýa", "nýja"
-"nýan", "nýjan"
-"nýar", "nýjar"
-"nýum", "nýjum"
-"nýasta", "nýjasta"
-"nýasti", "nýjasti"
-"nýji", "nýi"
-"nýjir", "nýir"
-"nýu", "nýju"
-"pragt", "prakt"
-"reindar", "reyndar"
-"ringdi", "rigndi"
-"ríkistjórn", "ríkisstjórn"
-"ríkistjórnar", "ríkisstjórnar"
-"ríkistjórnin", "ríkisstjórnin"
-"ríkistjórnina", "ríkisstjórnina"
-"ríkistjórninni", "ríkisstjórninni"
-"ríkistjórnarinnar", "ríkisstjórnarinnar"
-"sagð", "sagði"
-"samkynhneiðra", "samkynhneigðra"
-"silgdi", "sigldi"
-"silgdu", "sigldu"
-"silgt", "siglt"
-"skerðin", "skerðing"
-"skoðunu", "skoðunum"
-"slóu", "slógu"
-"soleiðis", "svoleiðis"
-"solleis", "svoleiðis"
-"solleiðis", "svoleiðis"
-"sollis", "svoleiðis"
-"starfssemi", "starfsemi"
-"stendu", "stendur"
-"stærs", "stærst"
-"stætó", "strætó"
-"sunnann", "sunnan"
-"Svíðþjóð", "Svíþjóð"
-"Svíðþjóðar", "Svíþjóðar"
-"sæu", "sæju"
-"sæum", "sæjum"
-"sæust", "sæjust"
-"síðsta", "síðasta"
-"síðstu", "síðustu"
-"síðus", "síðust"
-"sólarmeginn", "sólarmegin"
-"tvöfallt", "tvöfalt"
-"tífallt", "tífalt"
-"tóskt", "tókst"
-"ut", "út"
-"utann", "utan"
-"vegn", "vegna"
-"veirð", "verið"
-"vekji", "veki"
-"vekjir", "vekir"
-"virðst", "virst"
-"yfi", "yfir"
-"ábygð", "ábyrgð"
-"áfam", "áfram"
-"áfarm", "áfram"
-"áfarmhaldandi", "áframhaldandi"
-"áftur", "aftur"
-"áhri", "áhrif"
-"átjan", "átján"
-"átjanda", "átjánda"
-"átjá", "átján"
-"áðann", "áðan"
-"ætlaru", "ætlarðu"
-"ættiru", "ættirðu"
-"íllt", "illt"
-"Íslendignar", "Íslendingar"
-"Íslendignur", "Íslendingur"
-"ókeipis", "ókeypis"
-"þanig", "þannig"
-"þanngað", "þangað"
-"þe", "þ.e."
-"þei", "þeir"
-"þeira", "þeirra"
-"þeiri", "þeirri"
-"þgear", "þegar"
-"þin", "þín"
-"þo", "þó"
-"þrefallt", "þrefalt"
-"þu", "þú"
-"þvi", "því"
-
-
 [capitalization_errors]
 
 # Common errors in capitalization
@@ -874,11 +887,14 @@ kunta				píka_kvk
 tilli				limur_kk
 hommatittur			hommi_kk
 faggi				hommi_kk
+lessa				lesbía_kvk
 negri				blökkumaður_kk
 surtur				blökkumaður_kk
+blámaður			blökkumaður_kk
 júði				gyðingur_kk
 múhameðstrú			íslam_hk
 múhameðstrúarmaður	múslími_kk
+
 
 [multiword_errors]
 
